Revert "Issue #2900766 by rubendello: Not all autocomplete values are visible/clickable on smaller screens"
This reverts commit 8311d068e91f2546cb7c8d88e215ac7220e987be.

--- a/css/linkit.autocomplete.css
+++ b/css/linkit.autocomplete.css
@@ -23,7 +23,6 @@
 
 /* Override the default jQuery UI theme */
 .linkit-ui-autocomplete {
-  height: calc((100vh - 80px)/2);
   max-height: 330px;
   overflow: auto;
 }
